infrastructure/alertmanager/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 2000
      hostname: alertmanager
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-volume
        - name: config-volume
          configMap:
            name: config
      containers:
        - name: alertmanager
          image: docker.io/prom/alertmanager@sha256:cc54cc450174ada901b32eb2538de5fc70ee259a1ac551ed38023f2ca2ad00e3
          resources:
            requests:
              memory: 50M
            limits:
              memory: 500M
          args:
            - --config.file=/etc/alertmanager/alertmanager.yml
            - --storage.path=/alertmanager
            - --web.external-url=https://alertmanager.beaver-cloud.xyz
          volumeMounts:
            - name: config-volume
              mountPath: /etc/alertmanager
            - name: data-volume
              mountPath: /alertmanager
          ports:
            - name: web
              containerPort: 9093

---
apiVersion: v1
kind: Service
metadata:
  name: service
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
